--- a/style.css
+++ b/style.css
@@ -51,20 +51,9 @@ body{
     font-weight: 400;
 }
 
-.section-hero{
-    background-color: #fdf2e9;
-    padding: 9.6rem 0;
-}
-
-.hero{
-    max-width: 130rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 9.6rem;
-    margin: 0 auto;
-    align-items: center;
-}
-
+/* ******************************** */
+/* General components */
+/* ******************************** */
 .heading-primary{
     font-size: 5.2rem;
     font-weight: 700;
@@ -74,10 +63,8 @@ body{
     margin-bottom: 3.2rem;
 }
 
-.hero-description{
-    font-size: 2rem;
-    line-height: 1.6;
-    margin-bottom: 4.8rem;
+.margin-right-small{
+    margin-right: 1.6rem;
 }
 
 .btn:link,
@@ -87,7 +74,7 @@ body{
     font-weight: 600;
     padding: 1.6rem 3.2rem;
     display: inline-block;
-    border-radius: 5px;    
+    border-radius: 9px;    
 
     /* Put transition on the original element */
     transition: background-color .3s;
@@ -116,6 +103,85 @@ body{
 
     /* Trick to add border inside*/
     box-shadow: inset 0 0 0 3px #fff;
+}
+/* ******************************** */
+/* Header */
+/* ******************************** */
+.header{
+    /* a fixed height make it easy to implement sticky later */
+    height: 9.6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+    padding: 0 4.8rem;
+}
+
+
+.logo{
+    height: 2.2rem;
+}
+
+/* ******************************** */
+/* Navigation */
+/* ******************************** */
+.main--nav{
+
+}
+.main--nav--list{
+    list-style: none;
+    display: flex;
+    gap: 3.2rem;
+    
+}
+.main--nav--link:link,
+.main--nav--link:visited{
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: #333;
+    transition: all .3s;
+}
+
+.main--nav--link:hover,
+.main--nav--link:active{
+    color: #cf711f;
+}
+
+.nav-cta:link,
+.nav-cta:visited{
+    padding: 1.2rem 2.4rem;
+    background-color: #e67e22;
+    color: #fff;
+    border-radius: 9px;
+}
+.nav-cta:hover,
+.nav-cta:active{
+    background-color: #cf711f;
+}
+
+/* ******************************** */
+/* Hero Section */
+/* ******************************** */
+.section-hero{
+    background-color: #fdf2e9;
+    padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero{
+    max-width: 130rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 9.6rem;
+    margin: 0 auto;
+    align-items: center;
+    padding: 0 4.8rem;
+}
+
+.hero-description{
+    font-size: 2rem;
+    line-height: 1.6;
+    margin-bottom: 4.8rem;
 }
 
 .delivered-meals{
@@ -154,7 +220,26 @@ body{
     width: 100%;
 }
 
-.margin-right-small{
-    margin-right: 1.6rem;
-}
+
+
+/* ******************************** */
+/* ******************************** */
+/* ******************************** */
+/* ******************************** */
+/* ******************************** */
+/* ******************************** */
+/* ******************************** */
+
+
+
+
+
+
+
+
+
+
+
+
+
 
