--- a/general.css
+++ b/general.css
@@ -28,7 +28,9 @@
  -Greys: #555
          #333
          #888
-
+#51cf66
+#94d82d
+#ffd43b
  ---04 letter spacing
  -0.5px
  .75px
@@ -37,6 +39,7 @@
  ---05 Shadows
  create inner border line
 box-shadow: inset 0 0 0 3px #fff;
+box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,.075);
 
  ---06 Border-radius
 9px
@@ -61,6 +64,10 @@ body{
    line-height: 1;
    color: #555;
    font-weight: 400;
+}
+
+strong{
+    font-weight: 500;
 }
 
 .container{
@@ -129,6 +136,7 @@ body{
    margin-bottom: 1.6rem;
    text-transform: uppercase;
 }
+
 
 .margin-right-small{
    margin-right: 1.6rem;
