--- a/style.css
+++ b/style.css
@@ -199,7 +199,77 @@
 
 
 /* ******************************** */
+/* Sample meals section */
 /* ******************************** */
+.section--meals{
+    padding: 9.6rem 0;
+}
+.meal{
+    box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,.075);
+    border-radius: 11px;
+    overflow: hidden;
+
+}
+.meal-img{
+    width: 100%;
+}
+.meal-content{
+    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+.meal-tags{
+    margin-bottom: 1.2rem;
+    display: flex;
+    gap: .4rem;
+}
+.tag{
+    display: inline-block;
+    padding:.4rem .8rem ;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    
+    color: #333;
+    border-radius: 100px;
+    font-weight: 600;
+}
+.tag-vegetarian{
+    background-color: #51cf66;
+}
+.tag-vegan{
+    background-color: #94d82d;
+}
+.tag-paleo{
+    background-color: #ffd43b;
+}
+
+.meal-title{
+    font-size: 2.4rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 3.2rem;
+}
+.meal-attributes{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+   
+}
+
+.meal-details{
+    font-size: 1.8rem; 
+    display: flex;
+    gap: 1.2rem;
+    align-items: center;
+    
+}
+
+.meal-icon{
+    color: #e67e22;
+    height: 2.4rem;
+    width: 2.4rem;
+
+}
+
 /* ******************************** */
 /* ******************************** */
 /* ******************************** */
