--- a/general.css
+++ b/general.css
@@ -141,6 +141,13 @@ strong{
 .margin-right-small{
    margin-right: 1.6rem;
 }
+.margin-bottom-md{
+    margin-bottom: 4.8rem;
+}
+
+.text-center{
+    text-align: center;
+}
 
 .btn:link,
 .btn:visited{
@@ -152,7 +159,7 @@ strong{
    border-radius: 9px;    
 
    /* Put transition on the original element */
-   transition: background-color .3s;
+   transition: all .3s;
 }
 
 .btn--full:link,
@@ -178,4 +185,20 @@ strong{
 
    /* Trick to add border inside*/
    box-shadow: inset 0 0 0 3px #fff;
+}
+
+.link:link,
+.link:visited{
+    display: inline-block;
+    text-decoration: none;
+    color: #e67e22;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    transition: all .3s;
+}
+
+.link:hover,
+.link:active{
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
 }
