finish testimonial section

--- a/style.css
+++ b/style.css
@@ -302,15 +302,64 @@
     font-size: 1.8rem;
 }
 
-
-
 /* ******************************** */
+/* Testimonial section */
 /* ******************************** */
-/* ******************************** */
+.section--testmonial{
+    background-color: #fdf2e9;
+    display: grid;
+    grid-template-columns: 55fr 45fr;
+    align-items: center;
+}
+.testmonial-left{
+    padding: 9.6rem;
+}
+ 
+.testmonial-box{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    row-gap: 4.8rem;
+    column-gap: 8rem;
+}
+.testmonial{
 
+}
+.testmonial-img{
+    width: 6.4rem;
+    border-radius: 50%;
+    margin-bottom: 1.2rem;
+}
 
+.testmonial-text{
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 1.6rem;
+}
 
+.testmonial-name{
+    font-size: 1.6rem;
+    color: #6f6f6f;
+}
+.gallery{
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1.6rem;
+    padding:1.6rem;
+}
+.gallery-item{
+    overflow: hidden;
+}
+.gallery-img{
+    /* To get rid of the white line between images */
+    display: block;
+    width: 100%;
+    transition: all .4s;
+}
 
+.gallery-img:hover{
+    transform: scale(1.1);
+}
 
 
 
