--- a/style.css
+++ b/style.css
@@ -351,8 +351,37 @@
 }
 
 .pricing-plan{
+    width: 75%;
     
+    
+    border-radius: 11px;
+}
 
+.pricing-plan-starter{
+    justify-self: end;
+    border: 2px solid #fdf2e9;
+    padding: 4.6rem;
+}
+.pricing-plan-complete{
+    background-color: #fdf2e9;
+    padding: 4.8rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.pricing-plan-complete::after{
+    content: "best value";
+    display: block;
+    position: absolute;
+    top: 6%;
+    right: -18%;
+    color: #333;
+    background-color: #ffd43b;
+    padding: 0.8rem 8rem;
+    font-size:1.4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    transform: rotate(45deg);
 }
 
 .plan-header{
@@ -385,13 +414,47 @@
     color: #6f6f6f;
     font-size: 1.6rem;
     line-height: 1.6;
-    
-    
+   
 }
 
 .plan-sign-up{
     text-align: center;
     margin-top: 4.8rem;
+}
+
+.plan-detail{
+    font-size: 1.6rem;
+    line-height: 1.6;
+    color: #6f6f6f;
+    text-align: center;
+    margin-top: -4.8rem;
+    margin-bottom: 9.6rem;
+}
+/* ******************************** */
+/* Pricing feature section */
+/* ******************************** */
+
+.feature-icon{
+    height: 3.2rem;
+    width: 3.2rem;
+    color: #e67e22;
+    background-color: #fdf2e9;
+    padding: 1.6rem;
+    border-radius: 50%;
+    margin-bottom: 3.2rem;
+}
+
+.feature-title{
+    font-size: 2.4rem;
+    color: #333;
+    font-weight: 700;
+    margin-bottom: 1.6rem;
+}
+
+.feature-text{
+    font-size: 1.8rem;
+    line-height: 1.8;
+
 }
 
 
