--- a/general.css
+++ b/general.css
@@ -22,8 +22,8 @@
  ---02 Colors
 
  -Primary:#e67e22
- -Tints:#fdf2e9 #fae5d3
- -Shades:#cf711f
+ -Tints:#fdf2e9 #fae5d3 #ffa94d
+ -Shades:#cf711f  #45260a;
  -Accents:
  -Greys: #555
          #333
