--- a/style.css
+++ b/style.css
@@ -430,9 +430,6 @@
     margin-top: -4.8rem;
     margin-bottom: 9.6rem;
 }
-/* ******************************** */
-/* Pricing feature section */
-/* ******************************** */
 
 .feature-icon{
     height: 3.2rem;
@@ -457,4 +454,37 @@
 
 }
 
+/* ******************************** */
+/* CTA section */
+/* ******************************** */
+.section--cta{
+    padding: 9.6rem 0;
+}
 
+.cta{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background-image: linear-gradient(to right bottom, #ffa94d, #e67e22);
+    border-radius: 11px;
+    box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,.15);
+    height: 50rem;
+    overflow: hidden;
+}
+
+.cta-text-box{
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+    color: #45260a;
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+}
+
+.cta-text-box h2{
+    margin-bottom: 3.2rem;
+    color: #45260a;
+}
+
+.cta-img-box{
+    background-image: linear-gradient(to right bottom, rgba(255, 169, 77, 0.3), rgba(230, 125, 34, 0.35)),url(content/img/eating.jpg);
+    background-size: cover;
+    background-position: center;
+}
