--- a/style.css
+++ b/style.css
@@ -457,8 +457,9 @@
 /* ******************************** */
 /* CTA section */
 /* ******************************** */
-.section--cta{
+.section-cta{
     padding: 9.6rem 0;
+    
 }
 
 .cta{
@@ -467,20 +468,25 @@
     background-image: linear-gradient(to right bottom, #ffa94d, #e67e22);
     border-radius: 11px;
     box-shadow: 0 2.4rem 4.8rem rgba(0,0,0,.15);
-    height: 50rem;
     overflow: hidden;
 }
 
 .cta-text-box{
     padding: 4.8rem 6.4rem 6.4rem 6.4rem;
     color: #45260a;
-    font-size: 1.8rem;
-    line-height: 1.8rem;
+    
 }
 
 .cta-text-box h2{
     margin-bottom: 3.2rem;
     color: #45260a;
+    
+}
+
+.cta-text{
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
 }
 
 .cta-img-box{
@@ -488,3 +494,42 @@
     background-size: cover;
     background-position: center;
 }
+
+.cta-form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap: 2.4rem;
+    
+}
+
+.cta-form label{
+    display: block;
+    margin-bottom: 1.2rem;
+    font-size: 1.6rem;
+    font-weight: 500;  
+}
+
+/* make focus visible with the orange background in cta */
+.cta *:focus{
+    box-shadow: 0 0 0 0.8rem rgb(253, 242, 233,.5);
+ }
+
+.cta-form input,
+.cta-form select{
+    font-family: inherit;
+    color: inherit;
+    width: 100%;
+    padding: 1.2rem;
+    border-radius: 9px;
+    border: none;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    font-size: 1.8rem;
+    background-color: #fdf2e9;
+}
+
+.cta-form input::placeholder{
+    color: #aaa;
+}
+
+
