add the footer with style

--- a/general.css
+++ b/general.css
@@ -29,6 +29,7 @@
          #333
          #888
          #6f6f6f (lightest grey allowed on #fdf2e9)
+         #767676 (lightest grey allowed on #fff)
 #51cf66
 #94d82d
 #ffd43b
@@ -97,6 +98,10 @@ strong{
 
 .grid--4-cols{
    grid-template-columns: repeat(4,1fr);
+}
+
+.grid--5-cols{
+   grid-template-columns: repeat(5,1fr);
 }
 
 .grid--center-v{
