--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     align-items: center;
     background-color: #fdf2e9;
     padding: 0 4.8rem;
+    position: relative;
 }
 
 
@@ -20,13 +21,11 @@
 /* ******************************** */
 /* Navigation */
 /* ******************************** */
-.main--nav{
 
-}
 .main--nav--list{
     list-style: none;
     display: flex;
-    gap: 3.2rem;
+    gap: 4.8rem;
     
 }
 .main--nav--link:link,
@@ -53,6 +52,26 @@
 .nav-cta:hover,
 .nav-cta:active{
     background-color: #cf711f;
+}
+
+/* ******************************** */
+/* Mobile nav */
+/* ******************************** */
+.btn-mobile-nav{
+    border: none;
+    background: none;
+    cursor: pointer;
+    display: none;
+}
+
+.icon-mobile-nav{
+    color: #333;
+    height: 4.8rem;
+    width: 4.8rem;
+}
+
+.icon-mobile-nav[name="close-outline"]{
+    display: none;
 }
 
 /* ******************************** */
@@ -121,7 +140,7 @@
 .featured{
     padding: 4.8rem 0 3.2rem 0;
 }
-.container{}
+
 .heading--featured--in{
     text-align: center;
     font-size: 1.4rem;
