--- a/queries.css
+++ b/queries.css
@@ -122,17 +122,18 @@ Instead 1rem =1em =16px */
 
     .main--nav{
         position: absolute;
-        background-color: rgba(255, 255, 255, 0.935);
+        background-color: rgba(255, 255, 255, 0.97);
         top: 0;
         left: 0;
-        width: 100%;
         height: 100vh;
+        width: 100%;
+        
         display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
         transform: translateX(100%);
-        transition: all .5s ease-in;
+        transition: all .2s ease-in;
 
         /* hide a property correctly */
         /* step1 */
@@ -141,12 +142,16 @@ Instead 1rem =1em =16px */
         pointer-events: none;
         /* step3 */
         visibility: hidden;
+        
     }
+
+
 
     .nav-open .main--nav{
         opacity: 1;
         pointer-events: auto;
         visibility: visible;
+        
         transform: translateX(0);
     }
 
@@ -160,13 +165,44 @@ Instead 1rem =1em =16px */
 
     .main--nav--list{
         flex-direction: column;
-        gap: 4.8;
+        gap: 4.8rem;
     }
 
     .main--nav--link:link,
     .main--nav--link:visited{
         font-size: 3rem;
 }
+
+/* ******************************** */
+/* Below 704px (small tablets) */
+/* ******************************** */
+@media (max-width:44em){
+    .grid--3-cols,.grid--4-cols{
+        grid-template-columns: repeat(2,1fr);
+     }
+     
+     .diets{
+         grid-column: 1/-1;
+         justify-self: center;
+     }
+     
+     .heading--secondary{
+        margin-bottom: 4.8rem;
+    }
+    .pricing-plan{
+        width: 100%;
+    }
+    .grid-footer{
+        grid-template-columns: repeat(6,1fr);
+    }
+    .nav-col{
+        grid-row: 1;
+        grid-column: span 2;
+        margin-bottom: 3.2rem;
+    }
+    .address-col,.logo-col{
+        grid-column: span 3;
+    }
 
 }
 
@@ -178,3 +214,4 @@ Instead 1rem =1em =16px */
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 
 */
+
